--- a/assets/css/convite-responsive.css
+++ b/assets/css/convite-responsive.css
@@ -91,8 +91,11 @@
 
     .minnie-fun-message {
         font-size: 0.77rem;
-        padding: 7px 10px;
-        top: 12%;
+        padding: 8px 11px;
+        top: 15%;
+        max-width: calc(100% - 16px);
+        white-space: normal;
+        line-height: 1.3;
     }
 
 }
