--- a/assets/css/minnie-art.css
+++ b/assets/css/minnie-art.css
@@ -22,7 +22,7 @@ body {
 .art-stage {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: visible;
     display: flex;
     justify-content: center;
     align-items: flex-start;
